--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.152",
+    "@types/babel__traverse": "^7.28.0",
+    "@types/http-errors": "^2.0.5",
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
     "aws-cdk": "2.1023.0",
@@ -25,9 +27,19 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.859.0",
-    "@aws-sdk/util-dynamodb": "^3.859.0",
+    "@aws-lambda-powertools/logger": "^2.25.2",
+    "@aws-lambda-powertools/metrics": "^2.25.2",
+    "@aws-lambda-powertools/tracer": "^2.25.2",
+    "@aws-sdk/client-dynamodb": "^3.876.0",
+    "@aws-sdk/lib-dynamodb": "^3.876.0",
+    "@aws-sdk/util-dynamodb": "^3.876.0",
+    "@middy/core": "^6.4.4",
+    "@middy/http-error-handler": "^6.4.4",
+    "@smithy/types": "^4.3.2",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "aws-cdk-lib": "2.206.0",
-    "constructs": "^10.0.0"
+    "constructs": "^10.0.0",
+    "http-errors": "^2.0.0"
   }
 }
