--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@aws-lambda-powertools/logger": "^2.25.2",
     "@aws-lambda-powertools/metrics": "^2.25.2",
     "@aws-lambda-powertools/tracer": "^2.25.2",
+    "@aws-sdk/client-bedrock-runtime": "^3.876.0",
     "@aws-sdk/client-dynamodb": "^3.876.0",
+    "@aws-sdk/client-s3": "^3.876.0",
     "@aws-sdk/lib-dynamodb": "^3.876.0",
+    "@aws-sdk/s3-request-presigner": "^3.876.0",
     "@aws-sdk/util-dynamodb": "^3.876.0",
     "@middy/core": "^6.4.4",
     "@middy/http-error-handler": "^6.4.4",
